# evict

./: Cargo.toml  README.md
src/: error.rs  lib.rs  policy.rs
src/policy/: lru.rs
src/replacer/: lru.rs  lru_k.rs  mod.rs
src/util/: mod.rs  timestamp_generator.rs  unique_sequence.rs
tests/: lru.rs  lru_k.rs
tests/common/: mod.rs
