[package]
name = "evict"
version = "0.2.2"
edition = "2024"
license = "MIT"
authors = ["Victor Farazdagi <farazdagi@gmail.com>"]
description = "Cache eviction policies: LRU, LRU-k, Clock etc"
homepage = "https://github.com/farazdagi/evict"
repository = "https://github.com/farazdagi/evict"
documentation = "https://docs.rs/evict"
readme = "README.md"
keywords = ["cache", "eviction", "page-replacement", "swap", "paging"]
categories = ["algorithms", "data-structures"]

[dependencies]
thiserror = "2.0"
parking_lot = "0.12"
priority-queue = "2.0"
chrono = "0.4"
